<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_border"
    android:orientation="vertical"
    android:background="@color/primary_dark"
    style="@style/ThemeDialog">
        <ImageView
            android:src="@drawable/gand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gand"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:elevation="1dp"/>

        <TextView
            android:text="@string/autor"
            android:textAlignment="center"
            style="@style/txtDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/centro"
            android:textAlignment="center"
            style="@style/txtDatos"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnAceptar"
            android:text="@string/boton_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>