<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_border"
    tools:context="es.gand.myapplication.PerroDetailFragment" >
    <ImageView
        android:id="@+id/imgFotoDt"
        android:src="@drawable/perro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/imgFotoDtG"
        android:src="@drawable/perro1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:elevation="4dp"
        android:visibility="invisible"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="@dimen/item_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_etNombre"
                    style="@style/txtEtiqueta"/>
                <TextView
                    android:id="@+id/tvNombreDt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txtDatos"
                    android:layout_toRightOf="@id/tvNombre"
                    android:textIsSelectable="true"/>
                <ImageButton
                    android:id="@+id/ibContacto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/tvRaza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_etRaza"
                    style="@style/txtEtiqueta"
                    android:layout_below="@id/tvNombreDt"/>
                <TextView
                    android:id="@+id/tvRazaDt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txtDatos"
                    android:layout_below="@id/tvNombreDt"
                    android:layout_toRightOf="@id/tvRaza"
                    android:textIsSelectable="true"/>

                <TextView
                    android:id="@+id/tvSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_etSexo"
                    style="@style/txtEtiqueta"
                    android:layout_below="@id/tvRazaDt"/>
                <TextView
                    android:id="@+id/tvSexoDt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txtDatos"
                    android:layout_below="@id/tvRazaDt"
                    android:layout_toRightOf="@id/tvSexo"
                    android:textIsSelectable="true"/>

                <TextView
                    android:id="@+id/tvEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_etEdad"
                    style="@style/txtEtiqueta"
                    android:layout_toRightOf="@id/tvSexoDt"
                    android:layout_below="@id/tvRazaDt"/>
                <TextView
                    android:id="@+id/tvEdadDt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txtDatos"
                    android:layout_below="@id/tvRazaDt"
                    android:layout_toRightOf="@id/tvEdad"
                    android:textIsSelectable="true"/>
                <CheckBox
                    android:id="@+id/cbVacunaDt"
                    android:text="@string/dt_cbVacuna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_below="@id/tvRazaDt"
                    android:layout_margin="8dp"
                    android:layout_toRightOf="@id/tvEdadDt"
                    style="@style/txtEtiqueta"
                    android:textColor="#666"/>
                <TextView
                    android:id="@+id/tvDetalles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_etDetalles"
                    style="@style/txtEtiqueta"
                    android:layout_below="@id/tvSexoDt"/>
                <TextView
                    android:id="@+id/tvDetallesDt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="@dimen/text_margin"
                    style="@style/txtDatos"
                    android:layout_below="@id/tvDetalles"
                    android:textIsSelectable="true"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
